<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_tasks"
            android:icon="@drawable/ic_assignment_grey600_24dp"
            android:title="@string/tasks"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_courses"
            android:checked="true"
            android:icon="@drawable/ic_school_grey600_24dp"
            android:title="@string/my_courses"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_student_progress"
            android:icon="@drawable/ic_poll"
            android:title="@string/student_progress_report"
            android:checkable="true"/>
        <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_forum_black"
            android:title="@string/messages"
            android:checkable="false"/>
        <item
            android:id="@+id/navigation_course_info"
            android:icon="@drawable/ic_info"
            android:title="@string/course_info"
            android:checkable="false"/>
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:checkable="false"/>
    </group>
</menu>