<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/pending_tasks_menu_group">
        <item
            android:id="@+id/action_forum"
            android:title="@string/messages"
            android:icon="@drawable/ic_forum_white"
            android:orderInCategory="100"
            android:visible="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_marks"
            android:title="@string/marks"
            android:icon="@drawable/ic_action_marks_white"
            android:orderInCategory="101"
            android:visible="false"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_refresh"
            android:title="@string/refresh"
            android:icon="@drawable/ic_sync_white_24dp"
            android:orderInCategory="102"
            app:showAsAction="ifRoom" />
    </group>
</menu>
